fix partial expand/collapse to node with delete. still has other bugs

--- a/src/index.css
+++ b/src/index.css
@@ -67,5 +67,5 @@ div.targetHandle {
   left: 50%;
   background: blue;
   border-radius: 0.5rem;
-  opacity: 0.2;
+  opacity: 0;
 }
